--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 
                 <div class="links">
                     <section class="github-link">
-                        <p>Github</p>
+                        <p class="social-links">Github</p>
                     </section>
                     <section class="frontendmentor-link">
-                        <p>Frontend Mentor</p>                
+                        <p class="social-links">Frontend Mentor</p>                
                     </section>
                     <section class="linkedin-link">
-                        <p>LinkedIn</p>                
+                        <p class="social-links">LinkedIn</p>                
                     </section>
                     <section class="twitter-link">
-                        <p>Twitter</p>                
+                        <p class="social-links">Twitter</p>                
                     </section>
                     <section class="instagram-link">
-                        <p>Instagram</p>                
+                        <p class="social-links">Instagram</p>                
                     </section>
 
                 </div>
