--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h1>
                         Aby Muc
                     </h1>
-                    <p class="location">Harare, Zimbabwe</p>
+                    <p class="location">Chiredzi, Zimbabwe</p>
                 </div>
                 <div class="description">
                     <p class="bio">"Frontend developer and avid reader."</p>
