--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Aby Muc" >
     <meta name="description" content="Social Links Profile">
     <title>Social Links Profile</title>
-    <link rel="shortcut icon" href="./images/favicon-32x32.png " type="image/x-icon"> 
+    <link rel="shortcut icon" href="./images/favicon.png " type="image/x-icon"> 
     <link rel="stylesheet" href="main.css"> 
 </head>
 <body>
@@ -15,7 +15,7 @@
             <div class="contents">
                 <section class="profile-picture">
                     <figure class="image">
-                        <img src="./images/image.png" alt="Profile Picture" width="88" height="88">
+                        <img src="./images/abymuc.png" alt="Profile Picture" width="88" height="88">
                         <figcaption class="offscreen">aby-muc</figcaption>
                     
                     </figure>
