--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 
                 <section class="links">
                     <section class="github-link">
-                        <p class="social-links">Github</p>
+                        <a class="social-links">Github</a>
                     </section>
                     <section class="frontendmentor-link">
-                        <p class="social-links">Frontend Mentor</p>                
+                        <a class="social-links">Frontend Mentor</a>                
                     </section>
                     <section class="linkedin-link">
-                        <p class="social-links">LinkedIn</p>                
+                        <a class="social-links">LinkedIn</a>                
                     </section>
                     <section class="twitter-link">
-                        <p class="social-links">Twitter</p>                
+                        <a class="social-links">Twitter</a>                
                     </section>
                     <section class="instagram-link">
-                        <p class="social-links">Instagram</p>                
+                        <a class="social-links">Instagram</a>                
                     </section>
 
                 </section>
