--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <article class="social-profile__card">
         <section class="social-profile__header">          
-                <div class="profile-picture">
+                <div class="profile-picture__avatar">
                     <figure class="image">
                         <img src="./images/abymuc.png" alt="Profile Picture" width="432" height="432" loading="lazy">
                         <figcaption class="offscreen">aby-muc</figcaption>                    
