--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         Frontend developer and avid reader.
                     </q>
                 </p>
-        </section>    /*header section ends*/
+        </section>
                 
 
                 <section class="card-links">                   
