--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     </figure>
                 </div>
             
-                <h1 class="social-profile__name>
+                <h1 class="social-profile__name">
                     Aby Muc
                 </h1>
                 <p class="location">Chiredzi, Zimbabwe</p>               
