--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
         <section class="social-profile__header">          
                 <div class="profile-picture__avatar">
                     <figure class="image">
-                        <img src="./images/abymuc.png" alt="Profile Picture" width="432" height="432" loading="lazy">
-                        <figcaption class="offscreen">aby-muc</figcaption>                    
+                        <img src="./images/avatar-jessica.jpeg" 
+                         alt="Profile Picture" 
+                         width="176"
+                         height="176" 
+                         loading="lazy"
+                        >
+                        <figcaption class="offscreen">avatar-jessica</figcaption>                    
                     </figure>
                 </div>
             
                 <h1 class="social-profile__name">
-                    Aby Muc
+                    Jessica Randall
                 </h1>
-                <p class="location">Chiredzi, Zimbabwe</p>               
+                <p class="location">London, United Kingdom</p>               
                
                 <p class="bio nowrap">
                     <q>
