--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <div class="profile-picture__avatar">
                     <figure class="image">
                         <img src="./images/avatar-jessica.jpeg" 
-                         alt="Profile Picture" 
+                         alt="Jessica Avatar" 
                          width="176"
                          height="176" 
                          loading="lazy"
                         >
-                        <figcaption class="offscreen">avatar-jessica</figcaption>                    
+                        <figcaption class="offscreen">Jessica Avatar</figcaption>                    
                     </figure>
                 </div>
             
